--- a/src/main/webapp/app/entities/consulta/consulta.component.html
+++ b/src/main/webapp/app/entities/consulta/consulta.component.html
@@ -52,7 +52,7 @@
                             <span class="d-none d-md-inline">View</span>
                         </button>
                         <button type="submit"
-                                [routerLink]="['/consulta', consulta.id, 'view']"
+                                [routerLink]="['/consulta', consulta.id, 'video']"
                                 class="btn btn-outline-info btn-sm">
                             <fa-icon [icon]="'pencil-alt'"></fa-icon>
                             <span class="d-none d-md-inline">Edit</span>
